--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
       rel="stylesheet"
     />
     <link href="https://img.icons8.com/plasticine/100/000000/great-britain.png" rel="icon" type="image/png" />
-    <title>RS Lang</title>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+    <title>Songbird</title>
   </head>
   <body>
     <div id="root"></div>
