--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
     <link href="https://img.icons8.com/plasticine/100/000000/great-britain.png" rel="icon" type="image/png" />
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <title>Songbird</title>
   </head>
   <body>
